Ajuste no endpoint controller clube lista todos,ajuste na regra de negocioClasse CLUBE,ESTADIO E PARTIDA